# Population-Simulation

./: .gitignore  Agriculture.md  Architecture.md  Cargo.toml  ChallengingThePlayer.md  MapGen_README.md  PopulationDesign.md  README.md  TerrainGenerator.md
design_docs/: Actors.md  Agriculture.md  Architecture.md  WorldBuilding.md
notebooks/: BirthRates.ipynb  Farming.ipynb  health.ipynb
notebooks/.ipynb_checkpoints/: BirthRates-checkpoint.ipynb
src/: lib.rs  main.rs  prelude.rs  ws_server.rs
src/agriculture/: components.rs  init.rs  mod.rs  sub_req.rs  systems.rs
src/components/: mod.rs  tiles.rs
src/map/: map_file_loader.rs  mesh.rs  mod.rs
src/misc/: components.rs  core_loop.rs  graph_ds.rs  mod.rs  normalize.rs  systems.rs  time.rs
src/networking/: mod.rs  sub_req.rs  subscription_system.rs  type_string.rs  types.rs  ws_server.rs
src/pop/: components.rs  init.rs  mod.rs  sub_req.rs  systems.rs
src/systems/: dynamic_system_experiments.rs  mod.rs  population.rs  subscription_system.rs
src/terrain/: components.rs  init.rs  init_tile_stats.rs  map_file_loader.rs  mesh.rs  mod.rs  sub_req.rs
src/worldbuilding/: agr_init.rs  map_file_loader.rs  mod.rs  pop_init.rs  terrain_init.rs
vue-client/: .browserslistrc  .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  vue.config.js
vue-client/public/: index.html
vue-client/src/: App.vue  App.vue.js  App.vue.js.map  MapManager.js  MapManager.js.map  MapManager.ts  main.js  main.js.map  main.ts  router.js  router.js.map  router.ts  store.js  store.js.map  store.ts  websocket.js  websocket.js.map  websocket.ts
vue-client/src/components/: Date.vue  Date.vue.js  Date.vue.js.map  Drawer.vue  HelloWorld.vue  HelloWorld.vue.js  HelloWorld.vue.js.map  SidePanel.vue  SidePanel.vue.js  SidePanel.vue.js.map  Toolbar.vue  Toolbar.vue.js  Toolbar.vue.js.map
vue-client/src/map_gen/: heightmap.js  heightmap.js.map  heightmap.ts  map-utils.js  map-utils.js.map  map-utils.ts  map_gen.js  map_gen.js.map  map_gen.ts  mesh.js  mesh.js.map  mesh.ts  old.js  planar-point-by-vec.js  planar-point-by-vec.js.map  planar-point-by-vec.ts  poissonDiscSampler.js  poissonDiscSampler.js.map  poissonDiscSampler.ts
vue-client/src/plugins/: vuetify.js  vuetify.js.map
vue-client/src/store/: AgricultureStore.js  AgricultureStore.ts  (+10 more)
(+26 files in other folders)
